@@ -7,6 +7,8 @@ import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
+import static scala.collection.JavaConverters.asScalaBuffer;
+
 /**
  * Created by jesu on 09/06/17.
  */
@@ -27,7 +29,12 @@ public enum LoginMethodType {
 
 	public static Seq<Tuple2<String, String>> portalLoginTypes() {
 		List<Tuple2<String, String>> collect = Stream.of(SocialLogin, Survey).map(LoginMethodType::toTuple).collect(Collectors.toList());
-		return scala.collection.JavaConverters.asScalaBuffer(collect).toList();
+		return asScalaBuffer(collect).toList();
+	}
+
+	public static Seq<Tuple2<String, String>> socialLoginTypes() {
+		List<Tuple2<String, String>> collect = Stream.of(Google, Facebook).map(LoginMethodType::toTuple).collect(Collectors.toList());
+		return asScalaBuffer(collect).toList();
 	}
 
 	private static Tuple2<String, String> toTuple(LoginMethodType lm) {
